spacing fix for embeds

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -117,6 +117,10 @@
         @apply mb-20;
     }
 
+    > div:last-child {
+        @apply mb-0;
+    }
+
     .wp-block-heading {
         @apply mb-2;
     }
